# polyglot-lsp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
crates/base-db/: Cargo.toml
crates/base-db/src/: lib.rs
crates/ide/: Cargo.toml
crates/ide/src/: lib.rs  syntax_tree.rs
crates/polyglot-analyzer/: Cargo.toml
crates/polyglot-analyzer/src/: caps.rs  config.rs  global_state.rs  lsp_ext.rs  main_loop.rs  reload.rs  to_proto.rs
crates/polyglot-analyzer/src/cli/: lsif.rs  scip.rs
crates/polyglot-analyzer/src/handlers/: notification.rs  request.rs
crates/polyglot-analyzer/tests/slow-tests/: main.rs  support.rs
crates/project-model/src/: lib.rs  polyjson_project.rs  workspace.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: lib.rs
editors/code/: language-configuration-java.json  language-configuration-js.json  language-configuration-python.json  package.json  tsconfig.json
editors/code/src/: ast_inspector.ts  bootstrap.ts  client.ts  commands.ts  config.ts  ctx.ts  debug.ts  diagnostics.ts  lsp_ext.ts  main.ts  run.ts  rust_project.ts  toolchain.ts  util.ts
