[package]
name = "base-db"
version = "0.0.0"
description = "TBD"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
salsa = "0.17.0-pre.2"
rustc-hash = "1.1.0"

triomphe.workspace = true

la-arena.workspace = true

# local deps
cfg.workspace = true
profile.workspace = true
stdx.workspace = true
syntax.workspace = true
test-utils.workspace = true
tt.workspace = true
vfs.workspace = true

polyglot_ast.workspace = true
# = { git = "https://github.com/bsauvat/polyglot_ast", version = "0.1.0", branch = "main" }

#polyglot_ast = {git = "https://github.com/bsauvat/polyglot_ast", version = "0.1.0", branch = "main"}
#polyglot_ast = { git = "https://github.com/bsauvat/polyglot_ast", rev = "a2d0393e907013caf77a12845cf003851b7862d7" }
